@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.klinker.android.twitter"
 
-          android:versionCode="108"
-          android:versionName="2.2.7" >
+          android:versionCode="109"
+          android:versionName="2.2.7.1" >
 
     <uses-sdk
             android:minSdkVersion="14"
