@@ -46,6 +46,11 @@
             />
 
         <Preference
+            android:key="manage_mutes_rt"
+            android:title="@string/muted_rts"
+            />
+
+        <Preference
             android:key="manage_mutes_hashtags"
             android:title="@string/muted_hashtags"
             android:summary="@string/muted_hashtags_summary"
