@@ -1,4 +1,5 @@
 <b>Version 2.2.7:</b><br/><br/>
+    &#8226; Mute retweets from selected users<br/>
     &#8226; Major rewrite of a lot of the background in preparation for some cool new stuff to come<br/>
     &#8226; Immediate switch to night mode<br/>
     &#8226; Clicking the time on the tweet viewer will open that tweet in the browser<br/>
